fixed the nav bar to the top of the page and adjusted the height of the body to ensure it doesnt overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,8 @@
 
 body {
     font-family: var(--primary-font);
+    /*Adjusted the padding so the nav bar doesn't overlap the main content*/
+    padding-top: 57.15px;
 }
 
 h1,
